hace el tag quitando palabras

--- a/apps/plantilla/views.py.save.8
+++ b/apps/plantilla/views.py.save.8
@@ -164,30 +164,11 @@ def taller3(request):
             consulta_22= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-22"}]}) 
 	    for user in consulta_22:
 		historico22= user.get("followers") 
-	    #historico 24
-            consulta_24= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-24"}]}) 
-	    for user in consulta_24:
-		historico24= user.get("followers") 
-	    #historico 25
-            consulta_25= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-25"}]}) 
-	    for user in consulta_25:
-		historico25= user.get("followers") 
-	    #historico 26
-            consulta_26= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-26"}]}) 
-	    for user in consulta_26:
-		historico26= user.get("followers") 
-	    #historico 27
-            consulta_27= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-27"}]}) 
-	    for user in consulta_27:
-		historico27= user.get("followers") 
-	    #historico 28
-            consulta_28= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-28"}]}) 
-	    for user in consulta_28:
-		historico28= user.get("followers") 
-	    #historico 29
-            consulta_29= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-29"}]}) 
-	    for user in consulta_29:
-		historico29= user.get("followers") 
+	    #historico 22
+            consulta_23= conn.db.historico.find({"$and":[{"cuenta":usuario},{"fecha":"2016-10-22"}]}) 
+	    for user in consulta_22:
+
+		historico22= user.get("followers") 
 
     else:
         form = form_usuario()
@@ -206,50 +187,30 @@ def taller3(request):
 	lista=[]
 	historico19=0
 	historico22=0
-	historico24=0
-	historico25=0
-	historico26=0
-	historico27=0
-	historico28=0
-	historico29=0
 
-    return render(request, "taller3.html",{"form":form, "numero_seguidores":numero_seguidores,"nombre_usuario":nombre_usuario,"amigos":amigos,"num_sent_p":num_sent_p,"num_sent_n":num_sent_n,"num_sent_neu":num_sent_neu,"num_sent_muyp":num_sent_muyp,"num_sent_muyn":num_sent_muyn,"total_polarida":total_polarida,"usuario":usuario,"lista":lista,"historico19":historico19,"historico22":historico22,"historico24":historico24,"historico25":historico25,"historico26":historico26,"historico27":historico27,"historico28":historico28,"historico29":historico29})
+    return render(request, "taller3.html",{"form":form, "numero_seguidores":numero_seguidores,"nombre_usuario":nombre_usuario,"amigos":amigos,"num_sent_p":num_sent_p,"num_sent_n":num_sent_n,"num_sent_neu":num_sent_neu,"num_sent_muyp":num_sent_muyp,"num_sent_muyn":num_sent_muyn,"total_polarida":total_polarida,"usuario":usuario,"lista":lista,"historico19":historico19,"historico22":historico22})
 
 
 def tagcloud(request):
-	#Secuencia para hacer el tag cloud de palabras 
     array_para_tagcloud=[]
     b=[]
-    h=[]
-    array_para_hash=[]
     conn = Connection()
 
     cons_palabras =conn.db.pertemas.find({},{"text":1,"_id":0})
     a=0
     arrayList = []
     for h in cons_palabras:
+        a=a+1
        	arrayList.append(h)
     reg = re.compile('([a-zA-Z]{3,}[^0-9])')
-    exprehash= re.compile("(\x23[a-zA-z]{3,})")
     lista = Counter(ma.group() for ma in reg.finditer(str(arrayList).strip('[]')))
-    
-    listahash = Counter(ma.group() for ma in exprehash.finditer(str(arrayList).strip('[]')))
     campo1="text"
     campo2="weight"
-    quitar=["https"]
-    for p in  lista.most_common(100):
-        print p[0]      
-	if p[0]not in ('que ', 'xeda ','https:','text\'','por ','las ','los ',"del ",'para ','una ','sobr e','como ','xed ','con ','para ','por '):
-	    print p[0]+":"
-	    b.extend([{campo1:p[0],campo2:p[1]}])	
-
-    for h in  listahash.most_common(200):#trae los has
-	array_para_hash.extend([{campo1:h[0],campo2:h[1]}])	
-
+    for p in  lista.most_common(50):
+	#array_para_tagcloud=[{campo1:p[0],campo2:p[1]}]
+	b.extend([{campo1:p[0],campo2:p[1]}])	
 	
-	# en la letra b llega el array para poder graficar el tag en el formato 	
-    # haciendo el tagcloud de hastag
+    # en la letra b llega el array para poder graficar el tag en el formato 	
 	   
-    return render(request, "tagcloud.html",{"obj":json.dumps(b),"array_para_hash":array_para_hash})
-
+    return render(request, "tagcloud.html",{"obj":json.dumps(b)})
 
